k8s/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-project-deployment
  labels:
    app: k8s-project
spec:
  replicas: 2  # Number of Pods to create
  selector:
    matchLabels:
      app: k8s-project
  template:
    metadata:
      labels:
        app: k8s-project
    spec:
      containers:
        - name: k8s-project-container
          image: yishu91/k8s-project:v1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /home
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /home
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: k8s-project-service
spec:
  type: NodePort
  selector:
    app: k8s-project
  ports:
    - protocol: TCP
      port: 80          # This is the service's port (external-facing)
      targetPort: 8080  
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /home
spec:
  ingressClassName: nginx
  rules:
  - host: go-web-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-project-service
            port:
              number: 80
